avoid some Integer construction